<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Liefern</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="attention">Attention</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>

    <!-- Slider items -->
    <string name="payment">PAYMENT</string>
    <string name="receipt">RECEIPT</string>
    <string name="delivery">DELIVERY</string>
    <string name="logout">LOGOUT</string>
    <string name="request">REQUEST</string>
    <string name="drawer_open"></string>
    <string name="drawer_close"></string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="title_activity_receipt">Receipts</string>
    <string name="title_activity_traveler">TravelerActivity</string>
    <string name="title_activity_shopper_page1">ShopperPage1Activity</string>
    <string name="title_activity_shopper_page2">ShopperPage2Activity</string>
    <string name="title_activity_shopper_page3">ShopperPage3Activity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="UrlMain">http://liefern.cloudapp.net:3000/api/</string>

    <color name="green">#328332</color>

    <string name="title_activity_rating_driver">RatingDriver</string>

</resources>
