<?xml version="1.0" encoding="utf-8"?>
<com.liefern.widgets.OpaqueLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle" >

    <TextView
        style="@style/FormHeading"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/name"
        style="@style/InputEditText"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/mobile_no"
        style="@style/InputEditText"
        android:hint="@string/mobile"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email_id"
        style="@style/InputEditText"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        style="@style/InputEditText"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_up"
        style="@style/BlackButton"
        android:text="@string/sign_up" />

</com.liefern.widgets.OpaqueLinearLayout>
