<?xml version="1.0" encoding="utf-8"?>
<com.liefern.widgets.OpaqueLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle" >

    <TextView
        style="@style/FormHeading"
        android:text="@string/login" />

    <EditText
        android:id="@+id/email_id"
        style="@style/InputEditText"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:text="arunmalik@gmail.com" />

    <EditText
        android:id="@+id/password"
        style="@style/InputEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="ABCD" />
    
    <CheckBox
        android:id="@+id/remember_me"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Remember Me" />

    <Button
        android:id="@+id/login"
        style="@style/BlackButton"
        android:layout_gravity="center"
        android:text="@string/login" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/sign_up_underlined"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</com.liefern.widgets.OpaqueLinearLayout>